<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.MainActivity">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobileNumber"
            style="@style/TextInputLayoutAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:counterEnabled="true"
            app:helperTextEnabled="true"
            app:helperText="@string/req"
            app:helperTextTextColor="@color/red"
            app:counterMaxLength="11"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobileNumberEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:digits="1234567890"
                android:hint="@string/phone_number"
                android:imeOptions="actionNext"
                android:inputType="number|textVisiblePassword"
                android:maxLength="11"
                android:paddingBottom="14dp"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordNumber"
            style="@style/TextInputLayoutAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/req"
            app:helperTextTextColor="@color/red"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mobileNumber"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordNumberEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:paddingBottom="14dp"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:backgroundTint="@color/purple_700"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minHeight="50dp"
            android:padding="0dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>